--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,7 @@ dependencies {
     def lifecycle_version = "2.5.1"
     def coroutine_version = "1.6.1"
     def room_version = "2.5.0"
+    def flexbox_version = "3.0.0"
 
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.6.0'
@@ -65,4 +66,7 @@ dependencies {
     implementation "androidx.room:room-runtime:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
     implementation "androidx.room:room-ktx:$room_version"
+
+    //for flexbox layout manager
+    implementation "com.google.android.flexbox:flexbox:$flexbox_version"
 }
